# fastapi-otel-elk

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  settings.toml
app/: config.py  logging.py  main.py
app/models/: pets.py
app/routers/v1/: __init__.py  equipment.py  pets.py
