[project]
name = "fastapi-otel-elk"
version = "0.1.0"
description = "Fastapi with OpenTelemetry instrumentation"
authors = [
    {name = "Mátyás Sándor",email = "matyas.sandor@lego.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "opentelemetry-api (>=1.33.0,<2.0.0)",
    "opentelemetry-sdk (>=1.33.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
