[tool.poetry]
name = "fastapi-otel-elk"
version = "0.1.0"
description = "Fastapi with OpenTelemetry instrumentation"
readme = "README.md"
authors = ["Mátyás Sándor"]
packages = [
    {include = "app"}
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
opentelemetry-sdk = "^1.33.0"
opentelemetry-api = "^1.33.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.33.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
